<resources>
    <string name="app_name">Roadvision</string>
    <string name="label_file_browser">File Browser</string>
    <string name="label_camera_control" translatable="false">Camera Control</string>
    <string name="label_network_configurations">Connection Settings</string>
    <string name="label_camera_settings" translatable="false">Camera Settings</string>
    <string name="label_video_resolution" translatable="false">Video Resolution</string>
    <string name="label_image_resolution" translatable="false">Image Resolution</string>
    <string name="label_motion_detection" translatable="false">Motion Detection</string>
    <string name="label_on" translatable="false">On</string>
    <string name="label_off" translatable="false">Off</string>
    <string name="label_flicker_frequency" translatable="false">Flicker Frequency</string>
    <string name="label_50Hz">50Hz</string>
    <string name="label_60Hz">60Hz</string>
    <string name="label_white_balance" translatable="false">White Balance</string>
    <string name="label_auto">Auto</string>
    <string name="label_daylight" translatable="false">Daylight</string>
    <string name="label_fluorescent" translatable="false">Fluorescent</string>
    <string name="label_brightness" translatable="false">Brightness</string>
    <string name="label_contrast" translatable="false">Contrast</string>
    <string name="label_exposure" translatable="false">Exposure</string>
    <string name="label_ip_camera_control" translatable="false">Camera Control</string>
    <string name="label_ip_camera_preview">Camera Viewfinder</string>
    <string name="label_ip_camera_browser" translatable="false">Camera File Browser</string>
    <string name="label_local_album" translatable="false">Local Album</string>
    <string name="label_wifi_ssid">WiFi SSID</string>
    <string name="label_encryption_key">Password</string>
    <string name="label_update" translatable="false">Update</string>
    <string name="label_re_activate_network">Update</string>
    <string name="label_find_camera" translatable="false">Find Camera</string>
    <string name="label_title">Title</string>
    <string name="label_time0">0:00</string>
    <string name="label_app_snapshot">App Snapshot</string>
    <string name="label_app_record">App Record</string>
    <string name="label_stop_record" translatable="false">Stop Recording</string>
    <string name="dialog_no_connection_title">Please check your WiFi setup:</string>
    <string name="dialog_no_connection_message">1. Ensure camera is opened.\n2. Open wifi in phone.\n3. Connect to camera by wifi.</string>
    <string name="label_ok">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_open">Open</string>
    <string name="label_Psystem">PAL</string>
    <string name="label_Nsystem">NTSC</string>
    <string name="label_TVSystem"> Video starnard</string>
    <string name="label_save" translatable="false">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_connect" translatable="false">Connect</string>
    <string name="label_video" translatable="false">Video</string>
    <string name="label_image" translatable="false">Image</string>
    <string name="label_camera_snapshot" translatable="false">Camera Snapshot</string>
    <string name="label_camera_record" translatable="false">Camera Record</string>
    <string name="label_camera_stop_record" translatable="false">Camera Stop Recording</string>
    <string name="label_camera_language" translatable="false">Language</string>
    <string name="message_command_succeed">Command Succeed!</string>
    <string name="message_command_failed">Command Failed!</string>
    <string name="message_fail_get_info">Failed to get camera information.</string>
    <string name="error_no_ssid">Please enter WiFi SSID.</string>
    <string name="error_ssid_too_long">SSID is too long.</string>
    <string name="error_no_key">Please enter encryption key.</string>
    <string name="error_key_too_short">Key is too short.</string>
    <string name="error_key_too_long">Key is too long.</string>
    <string name="label_language">Language</string>
    <string name="label_default">System Default</string>
    <string name="label_reading">Reading</string>
    <string name="label_items">items</string>
    <string name="message_save_video" translatable="false">Video files will be stored in local storage under directory</string>
    <string name="message_start_recording" translatable="false">Start Video Recording</string>
    <string name="label_language_TChinese">繁體中文</string>
    <string name="label_language_SChinese">简体中文</string>
    <string name="label_language_Russian" translatable="false">Русский</string>
    <string name="label_language_Spanish" translatable="false">español</string>
    <string name="label_language_Portuguese" translatable="false">português</string>
    <string name="label_language_French" translatable="false">français</string>
    <string name="label_language_Italian" translatable="false">italiano</string>
    <string name="label_language_Germany" translatable="false">Deutsch</string>
    <string name="label_language_Czech" translatable="false">čeština</string>
    <string name="label_language_Japanese" translatable="false">日本語</string>
    <string name="label_language_Korean" translatable="false">한국의</string>
    <string name="label_language_Latvian" translatable="false">Latvijas</string>
    <string name="label_language_Polish" translatable="false">polski</string>
    <string name="label_language_Romanian" translatable="false">român</string>
    <string name="label_language_Slovak" translatable="false">slovenský</string>
    <string name="label_language_Ukrainian" translatable="false">Український</string>
    <string name="app_Version">APP Version</string>
    <string name="FW_Version">Firmware Version</string>
    <string name="label_delete_files" translatable="false">Delete Files</string>
    <string name="AWB_Auto">Auto</string>
    <string name="AWB_Daylight">Daylight</string>
    <string name="AWB_Cloudy">Cloudy</string>
    <string name="AWB_Fluorescent_W">Fluorescent (White)</string>
    <string name="AWB_Fluorescent_N">Fluorescent (Natural)</string>
    <string name="AWB_Fluorescent_D">Fluorescent (Daylight)</string>
    <string name="AWB_Incandescent">Incandescent</string>
    <string name="Delete_Current_File">delete current file</string>
    <string name="Delete_All_Images">Delete all images</string>
    <string name="Delete_All_Videos">Delete all videos</string>
    <string name="label_Off">off</string>
    <string name="label_Low">Low</string>
    <string name="label_Middle">Middle</string>
    <string name="label_High">High</string>
    <string name="Flicker_50">50 Hz</string>
    <string name="Flicker_60">60 Hz</string>
    <string name="dialog_DHCP_error">Check your DHCP setup</string>
    <string name="Timesettings">Time Settings</string>
    <string name="SyncDevice">Synchronized with the device</string>
    <string name="SyncDeviceBTN">Press to "Manual Sync"</string>
    <string name="label_Close">Close</string>
    <string name="label_net_disconnected" translatable="false">Network disconnected</string>
    <string name="title_activity_main_activity_ui" translatable="false">MainActivityUI</string>
    <string name="action_settings">Settings</string>
    <string name="setting_wifi">SettingWifi</string>
    <string name="title_activity_local_file_list" translatable="false">LocalFileListActivity</string>
    <string name="main_title" translatable="false">mini DV</string>
    <string name="main_title_detail" translatable="false">指尖上的行车记录神器</string>
    <string name="main_video">Video View</string>
    <string name="main_dv">SD Card Files</string>
    <string name="main_local">Local Files</string>
    <string name="main_settings">Settings</string>
    <string name="open" translatable="false">Open</string>
    <string name="photo">Photo</string>
    <string name="backvideo">RearVideo</string>
    <string name="sosfile">SOS</string>
    <string name="frontvideo">FrontVideo</string>
    <string name="video">Video</string>
    <string name="label_download">Download</string>
    <string name="label_DV_quality">DV Quality</string>
    <string name="label_G_sensor">G-sensor</string>
    <string name="label_move" translatable="false">Motion Detection</string>
    <string name="label_TV_style">Flicker Frequency</string>
    <string name="label_version" translatable="false">Version</string>
    <string name="label_record_setting" translatable="false">Record Setting</string>
    <string name="dialog_no_connection_message_wifi">Connet to camera by wifi</string>
    <string name="dialog_no_connection_message_video_open">Ensure camera is opened</string>
    <string name="dialog_no_connection_message_open_wifi">Open wifi in phone</string>
    <string name="dialog_no_connection_message_title">Please check your WiFi setup</string>
    <string name="connecting_to_camera">Connecting to Camera</string>
    <string name="loading">Loading...</string>
    <string name="loading_tip" translatable="false"> PLEASE WAIT</string>
    <string name="running" translatable="false">running...</string>
    <string name="version_hardware" translatable="false">Hardware version</string>
    <string name="version_software" translatable="false">Software version</string>
    <string name="help">Help</string>
    <string name="minutes" translatable="false">Minutes</string>
    <string name="verify">Verification</string>
    <string name="verify_error">Ensure connect to camera</string>
    <string name="recording">APP Recording</string>
    <string name="downloading">Downloading...</string>
    <string name="pleasewait">Please wait</string>
    <string name="label_shared">Share</string>
    <string name="main_setting_warnning">To enter the Settings menu the camera will stop recording</string>
    <string name="main_enter" translatable="false">Enter</string>
    <string name="trip">Attention</string>
    <string name="exit_trip">Continue recording when exit?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="msg_recording">Start Record</string>
    <string name="msg_stoprecord">Stop Record</string>
    <string name="label_lockproetect" translatable="false">Video Lock</string>
    <string name="label_formatsdcard">Format SD Card</string>
    <string name="label_formattrip" translatable="false">All data will be deleted after SD card formatted, please attention!</string>
    <string name="label_formatbtn" translatable="false">Format</string>
    <string name="format_attaction">Formatting the SD card will permanently delete all files</string>
    <string name="warnnig" translatable="false">Warnnig!</string>
    <string name="ensure">Ensure</string>
    <string name="message_overwrite_file">File already exists, overwrite?</string>
    <string name="label_parkcar" translatable="false">Parking Monitoring</string>
    <string name="label_excursion" translatable="false">Lane Excursion</string>
    <string name="label_video_out" translatable="false">TV-OUT</string>
    <string name="sd_browser_stoprecord">Need Stop Record</string>
    <string name="sd_browser_open_stoprecord" translatable="false">Need Stop Record when opening file</string>
    <string name="updating">Recent Update：</string>
    <string name="nomore">No More</string>
    <string name="lodemore">To load more</string>
    <string name="intraday">Intraday</string>
    <string name="yesterday" translatable="false">Fivedays</string>
    <string name="connecterror">ConnectError</string>
    <string name="message_command_camer">Capturedsuccessfully！</string>
    <string name="message_command_uncamer" translatable="false">Snapfailure！</string>
    <string name="label_help">help</string>
    <string name="capcity">SD Card Status</string>
    <string name="capcityrecord">SD Files</string>
</resources>